[API] Photo username property, [BACKEND] Introduced username property to Photo database struct, [FRONTEND] BannedView, Like support, recent searches removed, username fixed in HomeView, graphical upgrades
